@@ -5,8 +5,9 @@ partman-auto (74) UNRELEASED; urgency=low
     available. Closes: #413505.
   * Make it possible to use a primary partition for LVM. Thanks to Grégory
     Oestreicher for spotting the issue and providing an initial patch.
+  * recipes.sh: simplify foreach_partition(); improves debug log readability.
 
- -- Frans Pop <fjp@debian.org>  Wed, 16 Jan 2008 09:39:12 +0100
+ -- Frans Pop <fjp@debian.org>  Fri, 18 Jan 2008 10:10:31 +0100
 
 partman-auto (73) unstable; urgency=low
 
